--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -47,12 +47,14 @@ header .dropdown-menu
   border: 1px solid rgba(255,255,255,.12) !important
   border-radius: 12px !important
   z-index: 99999 !important
+  color: #fff !important
 
 header .dropdown-link
   display: block !important
   padding: .75rem 1.1rem !important
   white-space: nowrap !important
   text-decoration: none !important
+  color: #fff !important
 
 header .dropdown-link:hover
   background: rgba(255,255,255,.08) !important
